# plantcli

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  pyrightconfig.json
plant/: cli.py
plant/cmd/: client.py
plant/utils/: messages.py
