[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
  | \.eggs
  | \.git
  | \.tox
  | \.venv
  | _build
  | build
  | changelog
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
line_length = 120
known_first_party = [ "tests" ]
include_trailing_comma = true
order_by_type = false
skip = [ "bin" ]

[tool.poetry]
name = "plant"
version = "0.1.0"
description = "Plantd CLI for interacting with connected devices"
authors = ["Geoff Johnson <geoff.jay@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyGObject = "^3.38.0"
click = "^8.0.3"
rich = "^11.0.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pre-commit = "^2.10.1"
pytest = "^6.2.4"
PyGObject-stubs = "^0.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
